force-app/main/default/objects/BWSalesReportingData__c/BWSalesReportingData__c.object-meta.xml
<CustomObject>
    <description>This object will be used for BW Sales Reporting purposes</description>
    <label>BW Sales Reporting Data</label>
    <nameField>
        <displayFormat>BSRP-{0000000}</displayFormat>
        <label>BW Sales Reporting Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BW Sales Reporting Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>