force-app/main/default/objects/BWSalesReportingData__c/fields/AugustThisYear__c.field-meta.xml
<CustomField>
    <fullName>AugustThisYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>August 2018</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>