force-app/main/default/objects/BWSalesReportingData__c/fields/DecemberLastYear__c.field-meta.xml
<CustomField>
    <fullName>DecemberLastYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>December 2017</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>