force-app/main/default/objects/BWSalesReportingData__c/fields/FebruaryLastYear__c.field-meta.xml
<CustomField>
    <fullName>FebruaryLastYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>February 2017</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>