force-app/main/default/objects/BWSalesReportingData__c/fields/FebruaryNextYear__c.field-meta.xml
<CustomField>
    <fullName>FebruaryNextYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>February 2019</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>