force-app/main/default/objects/BWSalesReportingData__c/fields/JanuaryLastYear__c.field-meta.xml
<CustomField>
    <fullName>JanuaryLastYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>January 2017</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>