force-app/main/default/objects/BWSalesReportingData__c/fields/MarchNextYear__c.field-meta.xml
<CustomField>
    <fullName>MarchNextYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>March 2019</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>