force-app/main/default/objects/BWSalesReportingData__c/fields/MarchThisYear__c.field-meta.xml
<CustomField>
    <fullName>MarchThisYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>March 2018</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>