force-app/main/default/objects/BWSalesReportingData__c/fields/MayLastYear__c.field-meta.xml
<CustomField>
    <fullName>MayLastYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>May 2017</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>