force-app/main/default/objects/BWSalesReportingData__c/fields/MayThisYear__c.field-meta.xml
<CustomField>
    <fullName>MayThisYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>May 2018</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>