force-app/main/default/objects/BWSalesReportingData__c/fields/MONTHACT__c.field-meta.xml
<CustomField>
    <fullName>MONTHACT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MONTH ACT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>