force-app/main/default/objects/BWSalesReportingData__c/fields/MONTHPY__c.field-meta.xml
<CustomField>
    <fullName>MONTHPY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MONTH PY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>