force-app/main/default/objects/BWSalesReportingData__c/fields/OctoberThisYear__c.field-meta.xml
<CustomField>
    <fullName>OctoberThisYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>October 2018</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>