force-app/main/default/objects/BWSalesReportingData__c/fields/ProductSegment__c.field-meta.xml
<CustomField>
    <fullName>ProductSegment__c</fullName>
    <label>Product Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BASIC</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>CORE</fullName>
            </value>
            <value>
                <fullName>ECONOMY</fullName>
            </value>
            <value>
                <fullName>GRAND LUXURY</fullName>
            </value>
            <value>
                <fullName>LUXURY</fullName>
            </value>
            <value>
                <fullName>MASS LUXURY</fullName>
            </value>
            <value>
                <fullName>Not assigned</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PROJECT</fullName>
            </value>
            <value>
                <fullName>REPAIR PARTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>