force-app/main/default/objects/BWSalesReportingData__c/fields/SalesManager__c.field-meta.xml
<CustomField>
    <fullName>SalesManager__c</fullName>
    <label>Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Midwest</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>Northwest</fullName>
            </value>
            <value>
                <fullName>Southcentral</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>Southwest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>