force-app/main/default/objects/BWSalesReportingData__c/fields/SalesRepresentative__c.field-meta.xml
<CustomField>
    <fullName>SalesRepresentative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Representative</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Representative</relationshipLabel>
    <relationshipName>SalesRepresentative</relationshipName>
    <type>Lookup</type>
</CustomField>