force-app/main/default/objects/BWSalesReportingData__c/fields/ShipTo__c.field-meta.xml
<CustomField>
    <fullName>ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ship To</relationshipLabel>
    <relationshipName>ShipTo</relationshipName>
    <type>Lookup</type>
</CustomField>