force-app/main/default/objects/BWSalesReportingData__c/fields/SmartSegment__c.field-meta.xml
<CustomField>
    <fullName>SmartSegment__c</fullName>
    <label>Smart Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>