force-app/main/default/objects/BWSalesReportingData__c/fields/SOIPCategory__c.field-meta.xml
<CustomField>
    <fullName>SOIPCategory__c</fullName>
    <label>SOIP Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BLS</fullName>
            </value>
            <value>
                <fullName>CHINAWARE COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>CHINAWARE NONCOMMERCIAL</fullName>
            </value>
            <value>
                <fullName>DXV BLS</fullName>
            </value>
            <value>
                <fullName>DXV CHINAWARE</fullName>
            </value>
            <value>
                <fullName>DXV FAUCETS</fullName>
            </value>
            <value>
                <fullName>FAUCETS COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>FAUCETS NONCOMMERCIAL</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>FLUSH VALVES</fullName>
            </value>
            <value>
                <fullName>GROHE CORE</fullName>
            </value>
            <value>
                <fullName>GROHE PROJECT</fullName>
            </value>
            <value>
                <fullName>SAFETY TUBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>