force-app/main/default/objects/BWSalesReportingData__c/fields/SoldTo__c.field-meta.xml
<CustomField>
    <fullName>SoldTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sold To</relationshipLabel>
    <relationshipName>SoldTo</relationshipName>
    <type>Lookup</type>
</CustomField>