force-app/main/default/objects/BWSalesReportingData__c/fields/YTDACTCAL__c.field-meta.xml
<CustomField>
    <fullName>YTDACTCAL__c</fullName>
    <defaultValue>0</defaultValue>
    <label>YTD ACT CAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>