force-app/main/default/objects/BWSalesReportingData__c/fields/YTDACTFiscal__c.field-meta.xml
<CustomField>
    <fullName>YTDACTFiscal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>YTD ACT Fiscal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>